--- a/ic.html
+++ b/ic.html
@@ -1,14 +1,43 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interface Comercial</title>
+    <link rel="stylesheet" href="ic.css">
 </head>
+
 <body>
-    <DIV></DIV>
+
     <header>
-      <h1>Component Customizing/SCMTMS/WDCC_FWD_ORDER, Main Page "$OTR:/SCMTMS/UI_FORWARDING_ORDER"</h1> 
-  </header>  
+        <div id="navbar">
+            <h1>Component Customizning/SCMTMS/WDCC_FWD_ORDER. Main Page "$OTR:/SCMTMS/UI_CMN/FORWARDING_ORDER</h1>
+        </div>
+        <div class="wow">
+        </div>
+        <div></div>
+        <div class="flex"></div>
+        <div class="flex"></div>
+        <div class="flex"></div>
+        <div class="flex"></div>
+        <div class="flex"></div>
+        <div class="flex"></div>
+        <div class="flex"></div>
+        <div class="flex"></div>
+        <div class="flex"></div>
+        <div class="flex"></div>
+        <div class="flex"></div>
+        <div class="flex"></div>
+        <div class="flex"></div>
+    </header>
+
+
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+
 </body>
+
 </html>
