--- a/ic.html
+++ b/ic.html
@@ -16,20 +16,20 @@
         </div>
         <div class="wow">
         </div>
-        <div></div>
-        <div class="flex"></div>
-        <div class="flex"></div>
-        <div class="flex"></div>
-        <div class="flex"></div>
-        <div class="flex"></div>
-        <div class="flex"></div>
-        <div class="flex"></div>
-        <div class="flex"></div>
-        <div class="flex"></div>
-        <div class="flex"></div>
-        <div class="flex"></div>
-        <div class="flex"></div>
-        <div class="flex"></div>
+
+        <div class="cont">
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+
+
+        </div>
+    
+
+
+
+
     </header>
 
 
